Fix overflow

--- a/SCSS/Notion like No Bullet Editor Mode.scss
+++ b/SCSS/Notion like No Bullet Editor Mode.scss
@@ -339,8 +339,13 @@
 			transition-timing-function: linear;
 			position: relative;
 			background-color: transparent;
-			margin-left: 1.6rem;
-			width: calc(100% - 1.6rem);
+			
+		}
+		[data-rem-tags~="highlight"] {
+			.tree-node--parent {
+				margin-left: 1.6rem;
+				width: calc(100% - 1.6rem);
+			}
 		}
 
 		// Sticky Top bar
